--- a/EasyRabbitMQ.Net.csproj
+++ b/EasyRabbitMQ.Net.csproj
@@ -5,16 +5,17 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-		<PackageId>EasyRabbitMQ</PackageId>
-		<Version>1.0.0</Version>
+		<PackageId>EasyRabbitMQ.Net</PackageId>
+		<Version>1.0.1</Version>
 		<Authors>AliFarkhondepey</Authors>
 		<Company>AliFarkhondepey</Company>
 		<Description>
 			This package provides a comprehensive solution for integrating RabbitMQ messaging into your .NET application. It includes classes and interfaces for message producers, consumers, a factory for creating these components, and hosted services for background message processing. This setup facilitates easy communication between different parts of your application through RabbitMQ.
 		</Description>
 		<PackageTags>RabbitMq, Messaging, .NET, Producer, Consumer</PackageTags>
-		<RepositoryUrl>#</RepositoryUrl>
+		<RepositoryUrl>https://github.com/Alifarkhondepey/EasyRabbitMQ</RepositoryUrl>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 	</PropertyGroup>
 
 
